# Personal_projects

./: LLVMBCCfinal.py  README.md  json_to_csv.py  test1.json
Binary_Dataset/: Readme.md  evaluation.py
Binary_Dataset/CWE_Samples/X86_32/double_free/: df0.out  df1.out  df10.out  df11.out  df12.out  df13.out  df14.out  df15.out  df16.out  df18.out  df19.out  df2.out  df20.out  df21.out  df22.out  df23.out  df24.out  df25.out  df26.out  df27.out  df28.out  df29.out  df3.out  df30.out  df31.out  df32.out  df33.out  df34.out  df35.out  df36.out  df37.out  df38.out  df39.out  df4.out  df40.out  df41.out  df42.out  df43.out  df44.out  df45.out  (+7 more)
Binary_Dataset/CWE_Samples/X86_32/mem_leak/: malloc0.out  malloc1.out  malloc10.out  malloc11.out  malloc12.out  malloc13.out  malloc14.out  malloc15.out  malloc16.out  malloc17.out  malloc18.out  malloc19.out  malloc2.out  malloc20.out  malloc21.out  malloc22.out  malloc23.out  malloc24.out  malloc25.out  malloc26.out  malloc27.out  malloc28.out  malloc29.out  malloc3.out  malloc30.out  malloc31.out  malloc32.out  malloc33.out  malloc34.out  malloc35.out  malloc36.out  malloc37.out  malloc38.out  malloc39.out  malloc4.out  malloc40.out  malloc41.out  malloc42.out  malloc43.out  malloc44.out  (+24 more)
Binary_Dataset/CWE_Samples/X86_64/double_free/: df0.out  df1.out  df10.out  df11.out  df12.out  df13.out  df14.out  df15.out  df16.out  df18.out  df19.out  df2.out  df20.out  df21.out  df22.out  df23.out  df24.out  df25.out  df26.out  df27.out  df28.out  df29.out  df3.out  df30.out  df31.out  df32.out  df33.out  df34.out  df35.out  df36.out  df37.out  df38.out  df39.out  df4.out  df40.out  df41.out  df42.out  df43.out  df44.out  df45.out  (+7 more)
Binary_Dataset/CWE_Samples/X86_64/mem_leak/: malloc0.out  malloc1.out  (+62 more)
Binary_Dataset/CWE_Samples/src/CWE401_Memory_Leak/: CMakeLists.txt
Binary_Dataset/CWE_Samples/src/CWE401_Memory_Leak/src/: malloc1.c
Binary_Dataset/CWE_Samples/src/CWE415_Double_Free/: CMakeLists.txt
Binary_Dataset/CWE_Samples/src/CWE415_Double_Free/src/: df29.c  df44.c  df8.c
Binary_Dataset/CWE_Samples/src/CWE415_Double_Free/test/: Makefile  dfexample.c  dfexample.ll  dfexample.out  dfexample.out.bc  dfexample.out.config.json  dfexample.out.ll  dfexample_opt.ll  dfexamplestrip.out  dfexamplestrip.out.bc  dfexamplestrip.out.config.json  dfexamplestrip.out.ll
json_to_csv/: json_to_csv.py  test.json
(+222 files in other folders)
